Use bundles, configure webpack.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World</title>
-    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   </head>
   <body>
       <div id="root">
           <table>
                   <thead>
                       <tr>
-                          <td>Header Cell</td>
+                          <td>Hot Reloading Header Cell</td>
                       </tr>
                   </thead>
                   <tbody>
@@ -22,8 +20,7 @@
           </table>
       </div>
 
-    <script src="js/digits.js" ></script>
-    <script src="js/index.js" ></script>
+    <script src="dist/bundle.js" ></script>
     
   </body>
 </html>
