--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <div id="root">
         </div>
 
-        <script src="dist/bundle.js" ></script>
+        <script src="bundle.js" ></script>
         
     </body>
 </html>
