--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <title>Abacus Practice Sheets</title>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <div id="root">
-        </div>
-
+        <div id="root"></div>
         <script src="bundle.js" ></script>
-        
     </body>
 </html>
