--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Abacus Practice Sheets</title>
-        <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet"> -->
+        <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"> -->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
