--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
+        <div id="configMenu">
+            <form action="get">
+                
+            </form>            
+        </div>
+        
         <div id="root"></div>
         <script src="bundle.js" ></script>
     </body>
