--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
         <script src="bundle.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function (event) {
-                console.log('onload')
-                configMenu.classList.add('menuOn')
+              /*                 console.log('onload')*/
+              /*                 configMenu.classList.add('menuOn')*/
             });
          let configMenu = document.getElementById('configMenu')
         </script>
