--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
             Configuration menu controls go here.
         </div>
         <div id="root"></div>
+        <div id="seed"></div>
         <script src="bundle.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function (event) {
