Initial work on answer presentation. Start reorganizing data object.

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         </div>
         <div id="root"></div>
         <div id="seed"></div>
+        <div id="answers"></div>
         <script src="bundle.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function (event) {
