Initial form fields for config.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <div id="configMenu" class="menuOff">
             Configuration menu controls go here.
         </div>
+        <div id="problemConfigForm"></div>
         <div id="root"></div>
         <div id="seed"></div>
         <div id="answers"></div>
